// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spellEffectsValues > damage and heal values 1`] = `
[
  [
    {
      "base": 50,
      "byLevel": [
        {
          "level": 1,
          "value": 50,
        },
        {
          "level": 2,
          "value": 55,
        },
        {
          "level": 6,
          "value": 75,
        },
        {
          "level": 9,
          "value": 90,
        },
        {
          "level": 10,
          "value": 95,
        },
        {
          "level": 11,
          "value": 100,
        },
        {
          "level": 12,
          "value": 110,
        },
      ],
      "className": "NormalValue",
      "scalesWithLevel": true,
      "unit": {
        "kind": "FIXED",
      },
    },
  ],
  [
    {
      "base": 30,
      "byLevel": [
        {
          "level": 1,
          "value": 30,
        },
        {
          "level": 2,
          "value": 33,
        },
        {
          "level": 6,
          "value": 45,
        },
        {
          "level": 9,
          "value": 54,
        },
        {
          "level": 10,
          "value": 57,
        },
        {
          "level": 11,
          "value": 60,
        },
        {
          "level": 12,
          "value": 66,
        },
      ],
      "className": "NormalValue",
      "scalesWithLevel": true,
      "unit": {
        "kind": "FIXED",
      },
    },
  ],
]
`;

exports[`spellEffectsValues > damage with effectiveness values 1`] = `
[
  [
    {
      "base": 25,
      "byLevel": [
        {
          "level": 1,
          "value": 25,
        },
        {
          "level": 2,
          "value": 27,
        },
        {
          "level": 6,
          "value": 37,
        },
        {
          "level": 9,
          "value": 45,
        },
        {
          "level": 10,
          "value": 47,
        },
        {
          "level": 11,
          "value": 50,
        },
        {
          "level": 12,
          "value": 55,
        },
      ],
      "className": "NormalValue",
      "scalesWithLevel": true,
      "unit": {
        "kind": "FIXED",
      },
    },
    {
      "base": 40,
      "byLevel": [
        {
          "level": 1,
          "value": 40,
        },
        {
          "level": 2,
          "value": 44,
        },
        {
          "level": 6,
          "value": 60,
        },
        {
          "level": 9,
          "value": 72,
        },
        {
          "level": 10,
          "value": 76,
        },
        {
          "level": 11,
          "value": 80,
        },
        {
          "level": 12,
          "value": 88,
        },
      ],
      "className": "NormalValue",
      "scalesWithLevel": true,
      "unit": {
        "kind": "FIXED",
      },
    },
  ],
]
`;

exports[`spellEffectsValues > heal value followed by valueless movement 1`] = `
[
  [
    {
      "base": 35,
      "byLevel": [
        {
          "level": 1,
          "value": 35,
        },
        {
          "level": 2,
          "value": 38,
        },
        {
          "level": 6,
          "value": 52,
        },
        {
          "level": 9,
          "value": 63,
        },
        {
          "level": 10,
          "value": 66,
        },
        {
          "level": 11,
          "value": 70,
        },
        {
          "level": 12,
          "value": 77,
        },
      ],
      "className": "NormalValue",
      "scalesWithLevel": true,
      "unit": {
        "kind": "FIXED",
      },
    },
  ],
  [],
]
`;

exports[`spellEffectsValues > only valueless movement 1`] = `
[
  [],
]
`;

exports[`spellEffectsValues > shadow percent damage 1`] = `
[
  [
    {
      "base": 35,
      "byLevel": [
        {
          "level": 1,
          "value": 35,
        },
        {
          "level": 2,
          "value": 40,
        },
        {
          "level": 6,
          "value": 60,
        },
        {
          "level": 9,
          "value": 75,
        },
        {
          "level": 10,
          "value": 80,
        },
        {
          "level": 11,
          "value": 85,
        },
        {
          "level": 12,
          "value": 95,
        },
      ],
      "className": "DarkSlashValue",
      "scalesWithLevel": true,
      "unit": {
        "kind": "PERCENT",
      },
    },
  ],
]
`;

exports[`spellEffectsValues > stat value and nested effectiveness values 1`] = `
[
  [
    {
      "base": 20,
      "byLevel": [
        {
          "level": 1,
          "value": 20,
        },
        {
          "level": 2,
          "value": 21,
        },
        {
          "level": 6,
          "value": 25,
        },
        {
          "level": 9,
          "value": 28,
        },
        {
          "level": 10,
          "value": 29,
        },
        {
          "level": 11,
          "value": 30,
        },
        {
          "level": 12,
          "value": 32,
        },
      ],
      "className": "NormalValue",
      "scalesWithLevel": true,
      "unit": {
        "kind": "PERCENT",
      },
    },
  ],
  [
    {
      "base": 30,
      "byLevel": [
        {
          "level": 1,
          "value": 30,
        },
        {
          "level": 2,
          "value": 31,
        },
        {
          "level": 6,
          "value": 37,
        },
        {
          "level": 9,
          "value": 42,
        },
        {
          "level": 10,
          "value": 43,
        },
        {
          "level": 11,
          "value": 45,
        },
        {
          "level": 12,
          "value": 48,
        },
      ],
      "className": "NormalValue",
      "scalesWithLevel": true,
      "unit": {
        "kind": "PERCENT",
      },
    },
    {
      "base": 0,
      "byLevel": [
        {
          "level": 1,
          "value": 0,
        },
        {
          "level": 2,
          "value": 0,
        },
        {
          "level": 6,
          "value": 0,
        },
        {
          "level": 9,
          "value": 0,
        },
        {
          "level": 10,
          "value": 0,
        },
        {
          "level": 11,
          "value": 0,
        },
        {
          "level": 12,
          "value": 0,
        },
      ],
      "className": "NormalValue",
      "scalesWithLevel": true,
      "unit": {
        "kind": "PERCENT",
      },
    },
  ],
]
`;

exports[`spellEffectsValues > summon values 1`] = `
[
  [
    {
      "base": 70,
      "byLevel": [
        {
          "level": 1,
          "value": 70,
        },
        {
          "level": 2,
          "value": 77,
        },
        {
          "level": 6,
          "value": 105,
        },
        {
          "level": 9,
          "value": 126,
        },
        {
          "level": 10,
          "value": 133,
        },
        {
          "level": 11,
          "value": 140,
        },
        {
          "level": 12,
          "value": 154,
        },
      ],
      "className": "NormalValue",
      "scalesWithLevel": true,
      "unit": {
        "kind": "FIXED",
      },
    },
    {
      "base": 45,
      "byLevel": [
        {
          "level": 1,
          "value": 45,
        },
        {
          "level": 2,
          "value": 54,
        },
        {
          "level": 6,
          "value": 90,
        },
        {
          "level": 9,
          "value": 117,
        },
        {
          "level": 10,
          "value": 121,
        },
        {
          "level": 11,
          "value": 126,
        },
        {
          "level": 12,
          "value": 135,
        },
      ],
      "className": "MinionAtkValue",
      "scalesWithLevel": true,
      "unit": {
        "kind": "FIXED",
      },
    },
  ],
]
`;
